sampling and SSR scheme

--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -25,6 +25,7 @@ mainfont: Liberation Serif
 # geometry: margin=2.54cm
 bibliography: library.bib
 csl: elsevier-harvard.csl
+always_allow_html: yes
 ---
 <!-- Things to fix in .tex document
 1. fix title size
@@ -35,64 +36,65 @@ csl: elsevier-harvard.csl
  
 ## Εισαγωγή
 
-Γιατί πρέπει να μελετηθεί η γεν. ποικ - διαφ 
-...Η (ευρωπαϊκή???) καστανιά (_Castanea sativa_ Mill.) is one of the most ancient and widespread
-Σημασία γενετικής ποικ Long term see introduction [@Pollegioni2011]
+Η ευρωπαϊκή καστανιά (_Castanea sativa_ Mill.) είναι ένα από τα πιο διαδεδομένα και οικονομικά σημαντικά είδη της λεκάνης της Μεσογείου (cite euforgen). Εκμεταλλεύεται τόσο για τους καρπούς της όσο και για την ξυλεία της και για αυτό το λόγο καλλιεργείται σε περιοχές πλέον της μεσογειακής ζώνης (citation?). 
+
+Η μεγάλη εξάρτηση κοινωνιών έχει οδηγήσει...
+Εξαιτίας της εκτεταμένης ανθρωπογενούς μεταφοράς γενετικού υλικού..., γενετικό υλικό του είδους έχει τύχει εκτεταμένης μεταφοράς (δες στα παπερ για ancient και κάνε cite) εδώ και αιώνες. Επιπλέον η χρήση επιλεγμένων γενοτύπων σε καστανεώνες αλλά και πρεμνοφυής διαχείριση των φύσικών πληθυσμών έχουν επιφέρει σημαντικές απώλειες γενετικών πόρων του είδους (αραβανοπ? - παπαδ). Η πίεση αυτή έχει ισχυροποιηθεί - ενταθεί λόγω προσβολών κυρίως από τους μύκητες _Cryphonectria parasitica_ και _Phytophthora cambivora_.
++ κατακερματισμός απομόνωση γενετικού υλικού
+
 ΔΕΣ Παπαδήμα Καστοριά
-Selection may erode genetic diversity, which is a crucial factor for the success of breeding programs.
-
-Γεωργία vs δασοπονία φυσικοί πληθυσμοί και Γανό σελ 19 [@__2013]
-  τι γίνεται με τους καστανεώνες, δες Πετρόπουλος. [@2016a]
-βοήθεια σε προγρ βελτίωσης: Γανό σελ 22 
-
-Σημαντικό είδος γιατί...
-
-Καρπός ξύλο
-γενετική βελτίωση σε χώρες - όπως Μαλλιαρού για οξυά
-
-<!-- !["Abies image"](Abies_alba_foliage_illustration.jpg) -->
-
-<!-- ```{r echo=FALSE, fig.cap="Abies alba", out.width='50%', fig.align='center'} -->
-<!-- knitr::include_graphics(path="/home/nikos/R_projects/PMS_proposal_chestnut/Abies_alba_foliage_illustration.jpg") -->
-<!-- ``` -->
 
 
 ## Θεωρητικό πλαίσιο
+<!-- Εξηγώ όλους τους παράγοντες που έγραψα στην εισαγωγή -->
+
+1. Σημασία γενετικής ποικ Long term see introduction [@Pollegioni2011]
+   γανο σελ 20-22
+   Selection may erode genetic diversity, which is a crucial factor for the success of breeding programs.
+    Γεωργία vs δασοπονία φυσικοί πληθυσμοί και Γανό σελ 19 [@__2013]
+   τι γίνεται με τους καστανεώνες, δες Πετρόπουλος. [@2016a]
+   
+   τι γινεται με τα coppice --> [@Aravanopoulos2018a]
 
 Refugia - Gene flow - Long term [@Petit2003; @Petit2005]
 Founder effect από ανθρω
+
+(κίνδυνος για γονιδιακή ροή - μόλυνση στον φυσικό πληθυσμό)
 
 Δυο λόγια για τη διεθνή βιβλιογραφία. 
 Υπάρχει ή δεν υπάρχει ποικιλότητα; "Γενικα'έχει βρεθεί ότι ... [...] 
 Συγκεκριμένα στην Ελλάδα...
   
-## Ερευνητικά ερωτήματα
+  
+1. Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία και διαχείριση των γενετικών πόρων ενός είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής ποικιλιών και άριστων κλώνων. ...kastanewnes... Αυτό έχει σαν αποτέλεσμα να δυσχερένεται το έργο των βελτιωτών στην εύρεση κατάλληλων γενοτύπων για διασταυρώσεις και να μειώνεται το δυναμικό προσαρμογής ως προς νέα γνωρίσματα.
 
-- μελέτη γενετικής ποικιλότητας των 2 πληθ
-- γενετικός χαρακτηρισμός καστανεώνα και κατ' επέκταση της ποικιλίας και φυσικού πληθυσμού
-- μελέτη γονιδιακής ροής μεταξύ των δύο πληθυσμών
+Αυτό το φαινόμενο παρατηρείται στους καστανεώνες της χώρας μας οι οποίοι συνήθως δημιουργούνται με εμβόλια επιλεγμένων κλώνων σε υποκείμενα άγριου τύπου. 
+coppice - πρεμνοφυής διαχείριση - τα πρεμνοφυή δάση αναπαράγονται βλαστικά και αρα αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008].[hill] Το χαμηλότερο δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό απόθεμα από το οποίο προκύπτει η εξέλιξη του δάσους είναι μικρό και άρα ενδυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό βαθμό εξελικτικής προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [47].
+
+refugia - founder effects
+
+γονιδιακή ροή
+
+## Ερευνητικά ερωτήματα
+Προτείνεται η μελέτη δύο πληθυσμών καστανιάς της νήσου Λέσβου. Ο ένας πληθυσμός εντοπίζεται σε φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς (βλαστικός πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει καστανεώνα ο οποίος έχει ιδρυθεί με τη χρήση εμβολίων σε άγριου-τύπου υποκείμενα.
+
+Σκοποί της παρούσας πρότασης είναι:
+
+1. Η μελέτη της γενετικής ποικιλότητας και διαφοροποίησης δύο πληθυσμών καστανιάς (καστανεώνας - φυσικός πληθυσμός) στη νήσο Λέσβο με τη χρήση μοριακών δεικτών μικροδορφόρων SSR.
+
+2. Ο γενετικός χαρακτηρισμός των πολυγονιδιακών γενοτύπων (multilocus genotypes) καστανεώνα και κατ' επέκταση της ποικιλίας καστανιάς στη νήσο Λέσβο.
+
+3. Η μελέτη γονιδιακής ροής μεταξύ των δύο πληθυσμών.
 
 ## Μεθοδολογία
 
 ### Συλλογή φυτικού υλικού & Εκχύλιση DNA
-Τουλάχιστον 25 άτομα από κάθε πληθυσμό?
-Αναγέννηση - αν ναι ενδεχομένως περισσότερα άτομα ???
+Θα διεξαχθεί δειγματοληψία κατ' ελάχιστον 25-30 ατόμων ανά πληθυσμό. Η εκχύλιση του γενωμικού DNA θα πραγματοποιηθεί με τη μέθοδο CTAB [Doyle and Doyle 1987]
 
-CTAB
 
 ### Αλυσιδωτή αντίδραση πολυμεράσης & Γενοτύπηση
+Για τη γενετική ανάλυση θα χρησιμοποιηθούν τρεις ουδέτεροι δείκτες SSR και πέντε δείκτες EST-SSR.
 
-```{r echo=FALSE}
-library(magrittr)
-library(kableExtra)
-kable(mtcars[1:10, 1:6], caption = "Group Rows") %>%
-  kable_styling("striped", full_width = F) %>%
-  group_rows("Group 1", 1, 7) %>%
-  group_rows("Group 2", 8, 9) %>% 
-  group_rows("Mean values", 10, 10) %>% 
-  row_spec(10:10, bold = T) %>% # last line bold
-  add_footnote("This is a footnote. *** means highly significant")
-```
 
 
 3 SSR and 5 EST-SSR citation??? is it this citation? [@marinoni_development_2003]
@@ -140,6 +142,11 @@ Nm=1/4FSt παραδοσιακή μέθοδος
 STRUCTURE μοντέλο πρόδρομης γνώσης πληθυσμών -> δες [@Aleksic2014; @pritchard_inference_2000]
 MIGRATE ???
 
+With an estimated average mutation rate of roughly l =5 · 10)4 (Goldstein & Schlotterer 1999; Whittaker et al. 2003)
+
+In many cases gene flow can be safely assumed to be high relative to mutation rate, so in much of the literature GST is used to assess migration rates [Whitlock 2011]
+
+
 ### Γενετική τοπίου
 IBD - mantel test - adegenet, ape
 Genetic boundaries γενετικά φράγματα φραγμοί- Monmonier's algorithm
@@ -163,6 +170,24 @@ gene flow
 ## Χρηματοδότηση / Χρονοδιάγραμμα
 
 [@Villani1991]
+
+<!-- !["Abies image"](Abies_alba_foliage_illustration.jpg) -->
+
+<!-- ```{r echo=FALSE, fig.cap="Abies alba", out.width='50%', fig.align='center'} -->
+<!-- knitr::include_graphics(path="/home/nikos/R_projects/PMS_proposal_chestnut/Abies_alba_foliage_illustration.jpg") -->
+<!-- ``` -->
+
+```{r echo=FALSE}
+library(magrittr)
+library(kableExtra)
+kable(mtcars[1:10, 1:6], caption = "Group Rows") %>%
+  kable_styling("striped", full_width = F) %>%
+  group_rows("Group 1", 1, 7) %>%
+  group_rows("Group 2", 8, 9) %>% 
+  group_rows("Mean values", 10, 10) %>% 
+  row_spec(10:10, bold = T) %>% # last line bold
+  add_footnote("This is a footnote. *** means highly significant")
+```
 
 ## Βιβλιογραφία
 <!-- &nbsp;  -->
