--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -113,30 +113,59 @@
 
 \section{Εισαγωγή}
 
-Γιατί πρέπει να μελετηθεί η γεν. ποικ - διαφ \ldots{}Η (ευρωπαϊκή???)
-καστανιά (\emph{Castanea sativa} Mill.) is one of the most ancient and
-widespread Σημασία γενετικής ποικ Long term see introduction (Pollegioni
-et al., 2011) ΔΕΣ Παπαδήμα Καστοριά Selection may erode genetic
-diversity, which is a crucial factor for the success of breeding
-programs.
+Η ευρωπαϊκή καστανιά (\emph{Castanea sativa} Mill.) ένα από τα πιο
+διαδεδομένα και οικονομικά σημαντικά είδη της λεκάνης της Μεσογείου
+(cite euforgen). Εκμεταλλεύεται τόσο για τους καρπούς της όσο και για
+την ξυλεία της και για αυτό το λόγο καλλιεργείται σε περιοχές πλέον της
+μεσογειακής ζώνης (citation?).
 
-Γεωργία vs δασοπονία φυσικοί πληθυσμοί και Γανό σελ 19 (Γανόπουλος,
-2013) τι γίνεται με τους καστανεώνες, δες Πετρόπουλος. (Πετρόπουλος,
-2016) βοήθεια σε προγρ βελτίωσης: Γανό σελ 22
+Η μεγάλη εξάρτηση κοινωνιών έχει οδηγήσει\ldots{} Εξαιτίας της
+εκτεταμένης ανθρωπογενούς μεταφοράς γενετικού υλικού\ldots{}, γενετικό
+υλικό του είδους έχει τύχει εκτεταμένης μεταφοράς (δες στα παπερ για
+ancient και κάνε cite) εδώ και αιώνες. Επιπλέον η χρήση επιλεγμένων
+γενοτύπων σε καστανεώνες αλλά και πρεμνοφυής διαχείριση των φύσικών
+πληθυσμών έχουν επιφέρει σημαντικές απώλειες γενετικών πόρων του είδους
+(αραβανοπ? - παπαδ). Η πίεση αυτή έχει ισχυροποιηθεί - ενταθεί λόγω
+προσβολών κυρίως από τους μύκητες \emph{Cryphonectria parasitica} και
+\emph{Phytophthora cambivora}.
 
-Σημαντικό είδος γιατί\ldots{}
-
-Καρπός ξύλο γενετική βελτίωση σε χώρες - όπως Μαλλιαρού για οξυά
+ΔΕΣ Παπαδήμα Καστοριά
 
 \hypertarget{-}{%
 \section{Θεωρητικό πλαίσιο}\label{-}}
 
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Σημασία γενετικής ποικ Long term see introduction (Pollegioni et al.,
+  2011) γανο σελ 20-22 Selection may erode genetic diversity, which is a
+  crucial factor for the success of breeding programs. Γεωργία vs
+  δασοπονία φυσικοί πληθυσμοί και Γανό σελ 19 (Γανόπουλος, 2013) τι
+  γίνεται με τους καστανεώνες, δες Πετρόπουλος. (Πετρόπουλος, 2016)
+
+  τι γινεται με τα coppice --\textgreater{} (Aravanopoulos, 2018)
+\end{enumerate}
+
 Refugia - Gene flow - Long term (Petit et al., 2003, 2005) Founder
 effect από ανθρω
+
+(κίνδυνος για γονιδιακή ροή - μόλυνση στον φυσικό πληθυσμό)
 
 Δυο λόγια για τη διεθνή βιβλιογραφία. Υπάρχει ή δεν υπάρχει ποικιλότητα;
 "Γενικα'έχει βρεθεί ότι \ldots{} {[}\ldots{}{]} Συγκεκριμένα στην
 Ελλάδα\ldots{}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\tightlist
+\item
+  Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής
+  παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία και
+  διαχείριση των γενετικών πόρων ενός είδους. Στη γεωργία, οι
+  περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των
+  γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής
+  διαδικασίας μέσω της επιλογής.
+\end{enumerate}
 
 \hypertarget{-}{%
 \section{Ερευνητικά ερωτήματα}\label{-}}
@@ -157,51 +186,13 @@ effect από ανθρω
 \hypertarget{----dna}{%
 \subsection{Συλλογή φυτικού υλικού \& Εκχύλιση DNA}\label{----dna}}
 
-Τουλάχιστον 25 άτομα από κάθε πληθυσμό? Αναγέννηση - αν ναι ενδεχομένως
-περισσότερα άτομα ???
+Κατ' ελάχιστον 25 άτομα από κάθε πληθυσμό? Αναγέννηση - αν ναι
+ενδεχομένως περισσότερα άτομα ???
 
 CTAB
 
 \hypertarget{---}{%
 \subsection{Αλυσιδωτή αντίδραση πολυμεράσης \& Γενοτύπηση}\label{---}}
-
-\begin{table}
-
-\caption{\label{tab:unnamed-chunk-1}Group Rows}
-\centering
-\begin{tabular}[t]{l|r|r|r|r|r|r}
-\hline
-  & mpg & cyl & disp & hp & drat & wt\\
-\hline
-\multicolumn{7}{l}{\textbf{Group 1}}\\
-\hline
-\hspace{1em}Mazda RX4 & 21.0 & 6 & 160.0 & 110 & 3.90 & 2.620\\
-\hline
-\hspace{1em}Mazda RX4 Wag & 21.0 & 6 & 160.0 & 110 & 3.90 & 2.875\\
-\hline
-\hspace{1em}Datsun 710 & 22.8 & 4 & 108.0 & 93 & 3.85 & 2.320\\
-\hline
-\hspace{1em}Hornet 4 Drive & 21.4 & 6 & 258.0 & 110 & 3.08 & 3.215\\
-\hline
-\hspace{1em}Hornet Sportabout & 18.7 & 8 & 360.0 & 175 & 3.15 & 3.440\\
-\hline
-\hspace{1em}Valiant & 18.1 & 6 & 225.0 & 105 & 2.76 & 3.460\\
-\hline
-\hspace{1em}Duster 360 & 14.3 & 8 & 360.0 & 245 & 3.21 & 3.570\\
-\hline
-\multicolumn{7}{l}{\textbf{Group 2}}\\
-\hline
-\hspace{1em}Merc 240D & 24.4 & 4 & 146.7 & 62 & 3.69 & 3.190\\
-\hline
-\hspace{1em}Merc 230 & 22.8 & 4 & 140.8 & 95 & 3.92 & 3.150\\
-\hline
-\multicolumn{7}{l}{\textbf{Mean values}}\\
-\hline
-\textbf{\hspace{1em}Merc 280} & \textbf{19.2} & \textbf{6} & \textbf{167.6} & \textbf{123} & \textbf{3.92} & \textbf{3.440}\\
-\hline
-\multicolumn{7}{l}{\textsuperscript{a} This is a footnote. *** means highly significant}\\
-\end{tabular}
-\end{table}
 
 3 SSR and 5 EST-SSR citation??? is it this citation? (Marinoni et al.,
 2003) θα χρησιμοποιήσουμε SSR γιατί είναι κατάλληλοι για τη μελέτη
@@ -262,6 +253,44 @@ algorithm sPCA Geneland DIYABC ??? GeneClass2 ???μελέτη\ldots{}
 
 (Villani et al., 1991)
 
+\begin{table}
+
+\caption{\label{tab:unnamed-chunk-1}Group Rows}
+\centering
+\begin{tabular}[t]{l|r|r|r|r|r|r}
+\hline
+  & mpg & cyl & disp & hp & drat & wt\\
+\hline
+\multicolumn{7}{l}{\textbf{Group 1}}\\
+\hline
+\hspace{1em}Mazda RX4 & 21.0 & 6 & 160.0 & 110 & 3.90 & 2.620\\
+\hline
+\hspace{1em}Mazda RX4 Wag & 21.0 & 6 & 160.0 & 110 & 3.90 & 2.875\\
+\hline
+\hspace{1em}Datsun 710 & 22.8 & 4 & 108.0 & 93 & 3.85 & 2.320\\
+\hline
+\hspace{1em}Hornet 4 Drive & 21.4 & 6 & 258.0 & 110 & 3.08 & 3.215\\
+\hline
+\hspace{1em}Hornet Sportabout & 18.7 & 8 & 360.0 & 175 & 3.15 & 3.440\\
+\hline
+\hspace{1em}Valiant & 18.1 & 6 & 225.0 & 105 & 2.76 & 3.460\\
+\hline
+\hspace{1em}Duster 360 & 14.3 & 8 & 360.0 & 245 & 3.21 & 3.570\\
+\hline
+\multicolumn{7}{l}{\textbf{Group 2}}\\
+\hline
+\hspace{1em}Merc 240D & 24.4 & 4 & 146.7 & 62 & 3.69 & 3.190\\
+\hline
+\hspace{1em}Merc 230 & 22.8 & 4 & 140.8 & 95 & 3.92 & 3.150\\
+\hline
+\multicolumn{7}{l}{\textbf{Mean values}}\\
+\hline
+\textbf{\hspace{1em}Merc 280} & \textbf{19.2} & \textbf{6} & \textbf{167.6} & \textbf{123} & \textbf{3.92} & \textbf{3.440}\\
+\hline
+\multicolumn{7}{l}{\textsuperscript{a} This is a footnote. *** means highly significant}\\
+\end{tabular}
+\end{table}
+
 \section{Βιβλιογραφία}
 
 \hypertarget{refs}{}
@@ -270,6 +299,11 @@ Aleksic, J.M., Geburek, T., 2014. Quaternary population dynamics of an
 endemic conifer, Picea omorika, and their conservation implications.
 Conservation Genetics 15, 87--107.
 \url{https://doi.org/10.1007/s10592-013-0523-6}
+
+\leavevmode\hypertarget{ref-Aravanopoulos2018a}{}%
+Aravanopoulos, F.A., 2018. Do Silviculture and Forest Management Affect
+the Genetic Diversity and Structure of Long-Impacted Forest Tree
+Populations? Forests 9, 14.
 
 \leavevmode\hypertarget{ref-goudet_hierfstat_2005}{}%
 Goudet, J., 2005. Hierfstat, a package for r to compute and test
