improved pcr scheme

--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -69,7 +69,7 @@ Founder effect από ανθρω
 1. Η λεπτομερής γνώση της δομής και της σύνθεσης της γενετικής παραλλακτικότητας αποτελεί απαραίτητη προϋπόθεση για την προστασία και διαχείριση των γενετικών πόρων ενός είδους. Στη γεωργία, οι περισσότερες καλλιέργειες, έχουν απολέσει το μεγαλύτερο μέρος των γενετικών πόρων που διέθεταν πριν την βελτιστοποίηση της παραγωγικής διαδικασίας μέσω της επιλογής ποικιλιών και άριστων κλώνων. ...kastanewnes... Αυτό έχει σαν αποτέλεσμα να δυσχερένεται το έργο των βελτιωτών στην εύρεση κατάλληλων γενοτύπων για διασταυρώσεις και να μειώνεται το δυναμικό προσαρμογής ως προς νέα γνωρίσματα.
 
 Αυτό το φαινόμενο παρατηρείται στους καστανεώνες της χώρας μας οι οποίοι συνήθως δημιουργούνται με εμβόλια επιλεγμένων κλώνων σε υποκείμενα άγριου τύπου. 
-coppice - πρεμνοφυής διαχείριση - τα πρεμνοφυή δάση αναπαράγονται βλαστικά και αρα αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008].[hill] Το χαμηλότερο δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό απόθεμα από το οποίο προκύπτει η εξέλιξη του δάσους είναι μικρό και άρα ενδυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό βαθμό εξελικτικής προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [47].
+coppice - πρεμνοφυής διαχείριση - τα πρεμνοφυή δάση αναπαράγονται βλαστικά και αρα αναμένεται να έχουν χαμηλότερο δραστικό μέγεθος πληθυσμού συγκρινόμενα με όμοιας έκτασης φυσικά δάση καστανιάς που αναπαράγονται εγγενώς [@Mattioni2008].[hill] Το χαμηλότερο δραστικό μέγεθος πληθυσμού υποδεικνύει ότι το γενετικό απόθεμα από το οποίο προκύπτει η εξέλιξη του δάσους είναι μικρό και άρα ενδυνάμει μικρότερο δυναμικό προσαρμογής ή/και πιο αργό βαθμό εξελικτικής προσαρμογής σε περιπτώσεις ταχείας περιβαλλοντικής μεταβολής [47].
 
 refugia - founder effects
 
@@ -82,7 +82,7 @@ refugia - founder effects
 
 1. Η μελέτη της γενετικής ποικιλότητας και διαφοροποίησης δύο πληθυσμών καστανιάς (καστανεώνας - φυσικός πληθυσμός) στη νήσο Λέσβο με τη χρήση μοριακών δεικτών μικροδορφόρων SSR.
 
-2. Ο γενετικός χαρακτηρισμός των πολυγονιδιακών γενοτύπων (multilocus genotypes) καστανεώνα και κατ' επέκταση της ποικιλίας καστανιάς στη νήσο Λέσβο.
+2. Ο γενετικός χαρακτηρισμός των πολυγονιδιακών γενοτύπων (multilocus genotypes) που συγκροτούν τον καστανεώνα και κατ' επέκταση την ποικιλίας καστανιάς στη νήσο Λέσβο. 
 
 3. Η μελέτη γονιδιακής ροής μεταξύ των δύο πληθυσμών.
 
@@ -91,19 +91,18 @@ refugia - founder effects
 ### Συλλογή φυτικού υλικού & Εκχύλιση DNA
 Θα διεξαχθεί δειγματοληψία κατ' ελάχιστον 25-30 ατόμων ανά πληθυσμό. Η εκχύλιση του γενωμικού DNA θα πραγματοποιηθεί με τη μέθοδο CTAB [Doyle and Doyle 1987]
 
-
 ### Αλυσιδωτή αντίδραση πολυμεράσης & Γενοτύπηση
-Για τη γενετική ανάλυση θα χρησιμοποιηθούν τρεις ουδέτεροι δείκτες SSR και πέντε δείκτες EST-SSR.
+Για τη γενετική ανάλυση θα χρησιμοποιηθούν μοριακοί δείκτες SSR (Simple Sequence Repeats). Οι SSR ή μικροδορυφορικοί δείκτες αποτελούνται από αλληλουχίες 2-5 νουκλεοτιδίων που επαναλαμβάνονται 5-100 φορές [@budak_comparative_2004]. Ο συγκυρίαρχος χαρακτήρας τους σε συνδυασμό με τα υψηλά επίπεδα πολυμορφισμού που παρουσιάζουν, τους καθιστούν εξαιρετικούς δείκτες για τη μελέτη πρόσφατων μικροεξελικτικών διεργασιών [@Wang2010a]. Οι μικροδορυφόροι μπορούν να διακριθούν σε ουδέτερους και λειτουργικούς. Στην πρώτη κατηγορία ανήκουν εκείνες οι γονιδιακές θέσεις οι οποίες βρίσκονται σε τυχαία τμήματα του γονιδιώματος. Αντίθετα οι λειτουργικοί δείκτες ενισχύουν γονιδιακές θέσεις που εκφράζονται και επομένως σχετίζονται με κάποια βιολογική διεργασία [citation???].
 
+Συγκεκριμένα θα χρησιμοποιηθούν τρεις ουδέτεροι δείκτες SSR και πέντε δείκτες EST-SSR. [@buck_isolation_2003; @martin_genetic_2010; @Sullivan2013].
 
+λειτουργικοί δείκτες ξηρασία [πετροπουλος σελ39]
 
-3 SSR and 5 EST-SSR citation??? is it this citation? [@marinoni_development_2003]
-θα χρησιμοποιήσουμε SSR γιατί είναι κατάλληλοι για τη μελέτη πρόσφατων μικροεξελικτικών διαδικασιών [@Wang2010a]
-Πώς θα γίνουν οι ομάδες multiplex --> diveRsity
 ABI3730xl σκοράρισμα --> GeneMapper
 
+πινακάκι - ποιοι είναι οι δείκτες που χρησιμοποιούνται?
+
 ### Βασικές παράμετροι γενετικής ποικιλότητας 
-ΜΑΛΛΟΝ ΠΡΕΠΕΙ ΝΑ ΦΤΙΑΞΩ ΠΙΝΑΚΑ ΜΕ ΛΟΓΙΣΜΙΚΑ ΚΑΙ ΤΙ ΘΑ ΚΑΝΟΥΝ
 R [@RCoreTeam2018]
 adegenet [@Jombart2008]
 poppr [@Kamvar2014]
@@ -130,7 +129,7 @@ Nei's Ds, Cav-Sf για φυλογενετικά
 F~ST~, G''~ST~, D~est~
 PCA, CA
 AMOVA
-φυλογενετική ape Cavalli-Sforza - Μάλλον δε χρειάζεται για 2 πληθυσμούς. Αν όμως προστεθούν κ άλλοι
+φυλογενετική ape Cavalli-Sforza - δε χρειάζεται για 2 πληθυσμούς. Αν όμως προστεθούν κ άλλοι
 STRUCTURE 
 DAPC
 
@@ -177,7 +176,7 @@ gene flow
 <!-- knitr::include_graphics(path="/home/nikos/R_projects/PMS_proposal_chestnut/Abies_alba_foliage_illustration.jpg") -->
 <!-- ``` -->
 
-```{r echo=FALSE}
+```{r eval=FALSE, include=FALSE}
 library(magrittr)
 library(kableExtra)
 kable(mtcars[1:10, 1:6], caption = "Group Rows") %>%
