--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -139,7 +139,8 @@ Cervus (see SM1 Leonarduzzi) -> ποσοστό παιδιών που οι γον
 <!-- άρα απαιτεί δειγματοληψία αναγέννησης-->
 Nm=1/4FSt παραδοσιακή μέθοδος
 STRUCTURE μοντέλο πρόδρομης γνώσης πληθυσμών -> δες [@Aleksic2014; @pritchard_inference_2000]
-MIGRATE ???
+MIGRATE
+MIGRAINE
 
 With an estimated average mutation rate of roughly l =5 · 10)4 (Goldstein & Schlotterer 1999; Whittaker et al. 2003)
 
@@ -165,6 +166,13 @@ GeneClass2 ???μελέτη...
 χαρακτηρισμός ποικιλίας Λέσβου
 gene flow
 
+ΔΕΣ ΔΥΟ παραγράφους outputs στο εδινβουργο!!!
+
+καταγραφή γενετικής ποικιλότητας και δημογραφικών παραγόντων των δύο πληθυσμών. Αυτό θα ενισχύσει την προσπάθει προστασία των γενετικών πόρων του είδους στο ΒΑ Αιγαίο και την ορθολογική διαχείρηση του πολλαπλασιαστικού υλικού
+
+γενετικός χαρακτηρισμός ποικιλία λεσβου Αγιάσου
+--> για την ταυτοποίηση και την ιχνηλασιμότητα
+πιστοποίηση [δες και γανό]
 
 ## Χρηματοδότηση / Χρονοδιάγραμμα
 
