--- a/Tourvas_proposal.tex
+++ b/Tourvas_proposal.tex
@@ -126,8 +126,10 @@ ancient και κάνε cite) εδώ και αιώνες. Επιπλέον η χ
   Σημασία γενετικής ποικ Long term see introduction (Pollegioni et al.,
   2011) γανο σελ 20-22 Selection may erode genetic diversity, which is a
   crucial factor for the success of breeding programs. Γεωργία vs
-  δασοπονία φυσικοί πληθυσμοί και Γανό σελ 19 (Γανόπουλος, 2013) τι
-  γίνεται με τους καστανεώνες, δες Πετρόπουλος. (Πετρόπουλος, 2016)
+  δασοπονία φυσικοί πληθυσμοί και Γανό σελ 19 ({\textbf{???}}) τι
+  γίνεται με τους καστανεώνες, δες Πετρόπουλος.
+  (\(\Pi\)\(\epsilon\)\(\tau\)\(\rho\)ό\(\pi\)ο\(\upsilon\)\(\lambda\)ος,
+  2016)
 
   τι γινεται με τα coppice --\textgreater{} (Aravanopoulos, 2018)
 \end{enumerate}
@@ -211,29 +213,32 @@ and Doyle 1987{]}
 
 Για τη γενετική ανάλυση θα χρησιμοποιηθούν μοριακοί δείκτες SSR (Simple
 Sequence Repeats). Οι SSR ή μικροδορυφορικοί δείκτες αποτελούνται από
-αλληλουχίες 2-5 νουκλεοτιδίων που επαναλαμβάνονται 5-100 φορές (Budak et
-al., 2004). Ο συγκυρίαρχος χαρακτήρας τους σε συνδυασμό με τα υψηλά
-επίπεδα πολυμορφισμού που παρουσιάζουν, τους καθιστούν εξαιρετικούς
-δείκτες για τη μελέτη πρόσφατων μικροεξελικτικών διεργασιών (Wang,
-2010). Οι μικροδορυφόροι μπορούν να διακριθούν σε ουδέτερους και
+αλληλουχίες 2-5 νουκλεοτιδίων που επαναλαμβάνονται 5-100 φορές
+({\textbf{???}}). Ο συγκυρίαρχος χαρακτήρας τους σε συνδυασμό με τα
+υψηλά επίπεδα πολυμορφισμού που παρουσιάζουν, τους καθιστούν
+εξαιρετικούς δείκτες για τη μελέτη πρόσφατων μικροεξελικτικών διεργασιών
+(Wang, 2010). Οι μικροδορυφόροι μπορούν να διακριθούν σε ουδέτερους και
 λειτουργικούς. Στην πρώτη κατηγορία ανήκουν εκείνες οι γονιδιακές θέσεις
 οι οποίες βρίσκονται σε τυχαία τμήματα του γονιδιώματος. Αντίθετα οι
 λειτουργικοί δείκτες ενισχύουν γονιδιακές θέσεις που εκφράζονται και
 επομένως σχετίζονται με κάποια βιολογική διεργασία {[}citation???{]}.
 
 Συγκεκριμένα θα χρησιμοποιηθούν τρεις ουδέτεροι δείκτες SSR και πέντε
-δείκτες EST-SSR (Buck et al., 2003; Martin et al., 2010; Sullivan et
-al., 2013).
+δείκτες EST-SSR. ({\textbf{???}}; {\textbf{???}}; Sullivan et al.,
+2013).
 
 λειτουργικοί δείκτες ξηρασία {[}πετροπουλος σελ39{]}
 
 ABI3730xl σκοράρισμα --\textgreater{} GeneMapper
 
+πινακάκι - ποιοι είναι οι δείκτες που χρησιμοποιούνται?
+
 \hypertarget{---}{%
 \subsection{Βασικές παράμετροι γενετικής ποικιλότητας}\label{---}}
 
 R (R Core Team, 2018) adegenet (Jombart, 2008) poppr (Kamvar et al.,
-2014) hierfstat (Goudet, 2005) genepop (Rousset, 2008) pegas ape fangorn
+2014) hierfstat ({\textbf{???}}) genepop (Rousset, 2008) pegas ape
+fangorn
 
 αριθμός διαφορετικών γενοτύπων (multilocus genotypes) Allelic richness -
 indicator να σημειωθεί ML\_Null-Freq LGP Fst outliers --\textgreater{}
@@ -260,7 +265,7 @@ ape Cavalli-Sforza - δε χρειάζεται για 2 πληθυσμούς. Α
 Cervus (see SM1 Leonarduzzi) -\textgreater{} ποσοστό παιδιών που οι
 γονείς τους είναι άτομα του πληθυσμού Nm=1/4FSt παραδοσιακή μέθοδος
 STRUCTURE μοντέλο πρόδρομης γνώσης πληθυσμών -\textgreater{} δες
-(Aleksic and Geburek, 2014; Pritchard et al., 2000) MIGRATE ???
+({\textbf{???}}; Aleksic and Geburek, 2014) MIGRATE ???
 
 With an estimated average mutation rate of roughly l =5 · 10)4
 (Goldstein \& Schlotterer 1999; Whittaker et al.~2003)
@@ -302,31 +307,13 @@ Aravanopoulos, F.A., 2018. Do Silviculture and Forest Management Affect
 the Genetic Diversity and Structure of Long-Impacted Forest Tree
 Populations? Forests 9, 14.
 
-\leavevmode\hypertarget{ref-buck_isolation_2003}{}%
-Buck, E.J., Hadonou, M., James, C.J., Blakesley, D., Russell, K., 2003.
-Isolation and characterization of polymorphic microsatellites in
-European chestnut (Castanea sativa Mill.). Molecular Ecology Notes 3,
-239--241. \url{https://doi.org/10.1046/j.1471-8286.2003.00410.x}
-
-\leavevmode\hypertarget{ref-budak_comparative_2004}{}%
-Budak, H., Shearman, R.C., Parmaksiz, I., Dweikat, I., 2004. Comparative
-analysis of seeded and vegetative biotype buffalograsses based on
-phylogenetic relationship using ISSRs, SSRs, RAPDs, and SRAPs. Theor
-Appl Genet 109, 280--288.
-\url{https://doi.org/10.1007/s00122-004-1630-z}
-
-\leavevmode\hypertarget{ref-goudet_hierfstat_2005}{}%
-Goudet, J., 2005. Hierfstat, a package for r to compute and test
-hierarchical F-statistics. Molecular Ecology Notes 5, 184--186.
-\url{https://doi.org/10.1111/j.1471-8286.2004.00828.x}
-
 \leavevmode\hypertarget{ref-Jombart2008}{}%
-Jombart, T., 2008. Adegenet: A R package for the multivariate analysis
+Jombart, T., 2008. adegenet: a R package for the multivariate analysis
 of genetic markers. Bioinformatics 24, 1403--1405.
 \url{https://doi.org/10.1093/bioinformatics/btn129}
 
 \leavevmode\hypertarget{ref-Kamvar2014}{}%
-Kamvar, Z.N., Tabima, J.F., Grünwald, N.J., 2014. Poppr : An R package
+Kamvar, Z.N., Tabima, J.F., Grünwald, N.J., 2014. Poppr : an R package
 for genetic analysis of populations with clonal, partially clonal,
 and/or sexual reproduction. PeerJ 2, e281.
 \url{https://doi.org/10.7717/peerj.281}
@@ -334,19 +321,13 @@ and/or sexual reproduction. PeerJ 2, e281.
 \leavevmode\hypertarget{ref-Leonarduzzi2016a}{}%
 Leonarduzzi, C., Piotti, A., Spanu, I., Vendramin, G.G., 2016. Effective
 gene flow in a historically fragmented area at the southern edge of
-silver fir (Abies alba Mill.) Distribution. Tree Genetics \& Genomes 12,
+silver fir (Abies alba Mill.) distribution. Tree Genetics \& Genomes 12,
 95. \url{https://doi.org/10.1007/s11295-016-1053-4}
-
-\leavevmode\hypertarget{ref-martin_genetic_2010}{}%
-Martin, M.A., Mattioni, C., Cherubini, M., Taurchini, D., Villani, F.,
-2010. Genetic diversity in European chestnut populations by means of
-genomic and genic microsatellite markers. Tree Genetics \& Genomes 6,
-735--744. \url{https://doi.org/10.1007/s11295-010-0287-9}
 
 \leavevmode\hypertarget{ref-Mattioni2008}{}%
 Mattioni, C., Cherubini, M., Micheli, E., Villani, F., Bucci, G., 2008.
-Role of domestication in shaping \emph{Castanea} \emph{Sativa} genetic
-variation in Europe. Tree Genetics \& Genomes 4, 563--574.
+Role of domestication in shaping Castanea sativa genetic variation in
+Europe. Tree Genetics \& Genomes 4, 563--574.
 \url{https://doi.org/10.1007/s11295-008-0132-6}
 
 \leavevmode\hypertarget{ref-Petit2003}{}%
@@ -370,17 +351,12 @@ Emilia Malvolti, M., 2011. Long-term human impacts on genetic structure
 of Italian walnut inferred by SSR markers. Tree Genetics \& Genomes 7,
 707--723. \url{https://doi.org/10.1007/s11295-011-0368-4}
 
-\leavevmode\hypertarget{ref-pritchard_inference_2000}{}%
-Pritchard, J.K., Stephens, M., Donnelly, P., 2000. Inference of
-Population Structure Using Multilocus Genotype Data. Genetics 155,
-945--959.
-
 \leavevmode\hypertarget{ref-RCoreTeam2018}{}%
 R Core Team, 2018. R: A Language and Environment for Statistical
-Computing.
+Computing. R Foundation for Statistical Computing, Vienna, Austria.
 
 \leavevmode\hypertarget{ref-Rousset2008}{}%
-Rousset, F., 2008. Genepop'007: A complete re-implementation of the
+Rousset, F., 2008. genepop'007: a complete re-implementation of the
 genepop software for Windows and Linux. Molecular Ecology Resources 8,
 103--106. \url{https://doi.org/10.1111/j.1471-8286.2007.01931.x}
 
@@ -393,8 +369,9 @@ Plant Molecular Biology Reporter 31, 231--239.
 
 \leavevmode\hypertarget{ref-Villani1991}{}%
 Villani, F., Pigliucci, M., Benedettelli, S., Cherubini, M., 1991.
-Genetic differentiation among Turkish chestnut (\emph{Castanea}
-\emph{Sativa} Mill.) Populations. Heredity 66, 131--136.
+Genetic differentiation among Turkish chestnut
+(\textless{}i\textgreater{}Castanea sativa\textless{}/i\textgreater{}
+Mill.) populations. Heredity 66, 131--136.
 \url{https://doi.org/10.1038/hdy.1991.16}
 
 \leavevmode\hypertarget{ref-Wang2010a}{}%
@@ -402,15 +379,19 @@ Wang, I.J., 2010. Recognizing the temporal distinctions between
 landscape genetics and phylogeography. Molecular Ecology 19, 2605--2608.
 \url{https://doi.org/10.1111/j.1365-294X.2010.04715.x}
 
-\leavevmode\hypertarget{ref-__2013}{}%
-Γανόπουλος, Ι., 2013. Διερεύνηση γενετικής ποικιλότητας, ταυτοποίηση και
-εφαρμογή λειτουργικών δεικτών στην κερασιά (\emph{Prunus} \emph{Avium}
-L.) (Διδακτορική Διατριβή). Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης.
-
 \leavevmode\hypertarget{ref-2016a}{}%
-Πετρόπουλος, Σ., 2016. Γενετική ποικιλότητα συμπατρικών πληθυσμών
-καστανιας (\emph{Castanea Sativa} Mill.) και των καρποφάγων εντόμων
-αυτής (Mεταπτυχιακή Διατριβή). Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης.
+\(\Pi\)\(\epsilon\)\(\tau\)\(\rho\)ό\(\pi\)ο\(\upsilon\)\(\lambda\)ος,
+\textbackslash{}., 2016. \(\Gamma\)ΕΝΕΤΙΚΗ \(\Pi\)ΟΙΚΙ\(\Lambda\)ΟΤΗΤΑ
+\(\Sigma\)\(\Upsilon\)Μ\(\Pi\)ΑΤΡΙΚ\(\Omega\)Ν
+\(\Pi\)\(\Lambda\)Η\(\Theta\)\(\Upsilon\)\(\Sigma\)Μ\(\Omega\)Ν
+ΚΑ\(\Sigma\)ΤΑΝΙΑ\(\Sigma\) (CASTANEA SATIVA MILL.) ΚΑΙ Τ\(\Omega\)Ν
+ΚΑΡ\(\Pi\)Ο\(\Phi\)Α\(\Gamma\)\(\Omega\)Ν ΕΝΤΟΜ\(\Omega\)Ν
+Α\(\Upsilon\)ΤΗ\(\Sigma\)
+(M\(\epsilon\)\(\tau\)\(\alpha\)\(\pi\)\(\tau\)\(\upsilon\)\(\chi\)\(\iota\)\(\alpha\)\(\kappa\)ή
+\(\Delta\)\(\iota\)\(\alpha\)\(\tau\)\(\rho\)\(\iota\)\(\beta\)ή).
+Α\(\rho\)\(\iota\)\(\sigma\)\(\tau\)ο\(\tau\)έ\(\lambda\)\(\epsilon\)\(\iota\)ο
+\(\Pi\)\(\alpha\)\(\nu\)\(\epsilon\)\(\pi\)\(\iota\)\(\sigma\)\(\tau\)ή\(\mu\)\(\iota\)ο
+\(\Theta\)\(\epsilon\)\(\sigma\)\(\sigma\)\(\alpha\)\(\lambda\)ο\(\nu\)ί\(\kappa\)\(\eta\)ς.
 
 
 \end{document}
