υλικά μεθοδοι εντός πληθυσμών στατ. ανάλυση

--- a/Tourvas_proposal.Rmd
+++ b/Tourvas_proposal.Rmd
@@ -73,61 +73,46 @@ coppice - πρεμνοφυής διαχείριση - τα πρεμνοφυή δ
 
 refugia - founder effects
 
-γονιδιακή ροή
+γονιδιακή ροή [aravanop2018]
 
 ## Ερευνητικά ερωτήματα
-Προτείνεται η μελέτη δύο πληθυσμών καστανιάς της νήσου Λέσβου. Ο ένας πληθυσμός εντοπίζεται σε φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς (βλαστικός πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει καστανεώνα ο οποίος έχει ιδρυθεί με τη χρήση εμβολίων σε άγριου-τύπου υποκείμενα.
+Προτείνεται η μελέτη δύο πληθυσμών καστανιάς της νήσου Λέσβου. Ο ένας πληθυσμός εντοπίζεται σε φυσική συστάδα η οποία διαχειρίζεται πρεμνοφυώς (βλαστικός πολλαπλασιασμός), ενώ ο δεύτερος αντιπροσωπεύει καστανεώνα (περιοχή Αγιάσου) ο οποίος έχει ιδρυθεί με τη χρήση εμβολίων σε άγριου-τύπου υποκείμενα.
 
 Σκοποί της παρούσας πρότασης είναι:
 
-1. Η μελέτη της γενετικής ποικιλότητας και διαφοροποίησης δύο πληθυσμών καστανιάς (καστανεώνας - φυσικός πληθυσμός) στη νήσο Λέσβο με τη χρήση μοριακών δεικτών μικροδορφόρων SSR.
+1. Η μελέτη της γενετικής ποικιλότητας και διαφοροποίησης δύο πληθυσμών καστανιάς (καστανεώνας - φυσικός πληθυσμός) στη νήσο Λέσβο με τη χρήση μοριακών δεικτών μικροδορυφόρων SSR.
 
-2. Ο γενετικός χαρακτηρισμός των πολυγονιδιακών γενοτύπων (multilocus genotypes) που συγκροτούν τον καστανεώνα και κατ' επέκταση την ποικιλίας καστανιάς στη νήσο Λέσβο. 
+2. Η καταγραφή των κλώνων (multilocus genotypes) που συγκροτούν τον καστανεώνα και κατ' επέκταση την ποικιλία καστάνων Αγιάσου στη νήσο Λέσβο. 
 
 3. Η μελέτη γονιδιακής ροής μεταξύ των δύο πληθυσμών.
 
 ## Μεθοδολογία
 
 ### Συλλογή φυτικού υλικού & Εκχύλιση DNA
-Θα διεξαχθεί δειγματοληψία κατ' ελάχιστον 25-30 ατόμων ανά πληθυσμό. Η εκχύλιση του γενωμικού DNA θα πραγματοποιηθεί με τη μέθοδο CTAB [Doyle and Doyle 1987]
+Θα διεξαχθεί δειγματοληψία κατ' ελάχιστον 25-30 ατόμων ανά πληθυσμό. Η εκχύλιση του γενωμικού DNA θα πραγματοποιηθεί με τη μέθοδο CTAB [@doyle1987genomic].
 
 ### Αλυσιδωτή αντίδραση πολυμεράσης & Γενοτύπηση
 Για τη γενετική ανάλυση θα χρησιμοποιηθούν μοριακοί δείκτες SSR (Simple Sequence Repeats). Οι SSR ή μικροδορυφορικοί δείκτες αποτελούνται από αλληλουχίες 2-5 νουκλεοτιδίων που επαναλαμβάνονται 5-100 φορές [@budak_comparative_2004]. Ο συγκυρίαρχος χαρακτήρας τους σε συνδυασμό με τα υψηλά επίπεδα πολυμορφισμού που παρουσιάζουν, τους καθιστούν εξαιρετικούς δείκτες για τη μελέτη πρόσφατων μικροεξελικτικών διεργασιών [@Wang2010a]. Οι μικροδορυφόροι μπορούν να διακριθούν σε ουδέτερους και λειτουργικούς. Στην πρώτη κατηγορία ανήκουν εκείνες οι γονιδιακές θέσεις οι οποίες βρίσκονται σε τυχαία τμήματα του γονιδιώματος. Αντίθετα οι λειτουργικοί δείκτες ενισχύουν γονιδιακές θέσεις που εκφράζονται και επομένως σχετίζονται με κάποια βιολογική διεργασία [citation???].
 
-Συγκεκριμένα θα χρησιμοποιηθούν τρεις ουδέτεροι δείκτες SSR και πέντε δείκτες EST-SSR. [@buck_isolation_2003; @martin_genetic_2010; @Sullivan2013].
+Συγκεκριμένα θα χρησιμοποιηθούν τρεις ουδέτεροι δείκτες SSR (EMCs38, CsCAT3, CsCAT6) [@buck_isolation_2003; @marinoni_development_2003] και πέντε δείκτες EST-SSR (GOT004, GOT021, FIR110, POR042 και WAG004) [@durand_fast_2010]. Οι EST-SSR που έχουν επιλεγεί σχετίζονται με την αντοχή των δέντρων σε συνθήκες υδατικής έλλειψης.
+<!-- Μήπως θα με ρωτήσουν αν κάνω καλά που επιλέγω est για μελέτη gene flow; -->
 
-λειτουργικοί δείκτες ξηρασία [πετροπουλος σελ39]
+### Γενετική ποικιλότητα εντός πληθυσμών
+Η στατιστική ανάλυση θα πραγματοποιηθεί σε περιβάλλον της στατιστικής γλώσσας R [@RCoreTeam2018] με χρήση των πακέτων poppr [@Kamvar2014], hierfstat [@goudet_hierfstat_2005], και genepop [@Rousset2008]. Οι βασικές παράμετροι γενετικής ποικιλότητας (αριθμός αλληλομόρφων, ετεροζυγωτία, συντελεστής ομομειξίας, ισορροπία Hardy-Weinberg κ.α.) θα εκτιμηθούν αφού πρώτα διερευνηθεί η ανισορροπία σύνδεσης μεταξύ των γονιδιακών θέσεων και η πιθανότητα ύπαρξης μηδενικών αλληλομόρφων. 
 
-ABI3730xl σκοράρισμα --> GeneMapper
+Η εκτίμηση δραστικού μεγέθους πληθυσμού θα πραγματοποιηθεί σύμφωνα με τη μέθοδο πρυ έχει προταθεί α...με το πρόγραμμα N~e~ Estimator [@Do2014],  
 
-πινακάκι - ποιοι είναι οι δείκτες που χρησιμοποιούνται?
+Επίσης θα υπολογιστεί ο αριθμός των γενοτύπων (multilocus genotypes) που απαντώνται στον υπό μελέτη καστανεώνα. 
 
-### Βασικές παράμετροι γενετικής ποικιλότητας 
-R [@RCoreTeam2018]
-adegenet [@Jombart2008]
-poppr [@Kamvar2014]
-hierfstat [@goudet_hierfstat_2005]
-genepop [@Rousset2008]
-pegas
-ape
-fangorn
-
-αριθμός διαφορετικών γενοτύπων (multilocus genotypes)
-Allelic richness - indicator να σημειωθεί
-ML_Null-Freq
-LGP
-Fst outliers --> BAYESCAN outflank
-
-NeEstimator ->
 M ratio -> υποδεικνύει μείωση μεγέθους πληθυσμού σε μεγάλα χρονικά διαστήματα [@Aleksic2014]
-BOTTLENECK -> πρόσφατες γενετικές στενωπούς (2 N~e~ - 4 N~e~ γενεές)
+BOTTLENECK -> πρόσφατες γενετικές στενωπούς (πρόσφατο εξελικτικό παρελθόν: 2 N~e~ - 4 N~e~ γενεές)
 
 R Notebook - R markdown
 
 ### διαφοροποίηση
 Nei's Ds, Cav-Sf για φυλογενετικά 
 F~ST~, G''~ST~, D~est~
-PCA, CA
+PCA, CA adegenet
 AMOVA
 φυλογενετική ape Cavalli-Sforza - δε χρειάζεται για 2 πληθυσμούς. Αν όμως προστεθούν κ άλλοι
 STRUCTURE 
@@ -147,24 +132,7 @@ With an estimated average mutation rate of roughly l =5 · 10)4 (Goldstein & Sch
 In many cases gene flow can be safely assumed to be high relative to mutation rate, so in much of the literature GST is used to assess migration rates [Whitlock 2011]
 
 
-### Γενετική τοπίου
-IBD - mantel test - adegenet, ape
-Genetic boundaries γενετικά φράγματα φραγμοί- Monmonier's algorithm
-sPCA
-Geneland
-DIYABC ???
-GeneClass2 ???
-
 ## Αναμενόμενα αποτελέσματα
-Τι θα μάθουμε από αυτή τη ### Γενετική τοπίου
-IBD - mantel test - adegenet, ape
-Genetic boundaries γενετικά φράγματα φραγμοί- Monmonier's algorithm
-sPCA
-Geneland
-DIYABC ???
-GeneClass2 ???μελέτη...
-χαρακτηρισμός ποικιλίας Λέσβου
-gene flow
 
 ΔΕΣ ΔΥΟ παραγράφους outputs στο εδινβουργο!!!
 
@@ -174,15 +142,13 @@ gene flow
 --> για την ταυτοποίηση και την ιχνηλασιμότητα
 πιστοποίηση [δες και γανό]
 
-## Χρηματοδότηση / Χρονοδιάγραμμα
-
-[@Villani1991]
+<!-- ## Χρηματοδότηση / Χρονοδιάγραμμα -->
 
 <!-- !["Abies image"](Abies_alba_foliage_illustration.jpg) -->
 
-<!-- ```{r echo=FALSE, fig.cap="Abies alba", out.width='50%', fig.align='center'} -->
-<!-- knitr::include_graphics(path="/home/nikos/R_projects/PMS_proposal_chestnut/Abies_alba_foliage_illustration.jpg") -->
-<!-- ``` -->
+```{r eval=FALSE, fig.align='center', fig.cap="Abies alba", include=FALSE, out.width='50%'}
+knitr::include_graphics(path="/home/nikos/R_projects/PMS_proposal_chestnut/Abies_alba_foliage_illustration.jpg")
+```
 
 ```{r eval=FALSE, include=FALSE}
 library(magrittr)
@@ -195,6 +161,20 @@ kable(mtcars[1:10, 1:6], caption = "Group Rows") %>%
   row_spec(10:10, bold = T) %>% # last line bold
   add_footnote("This is a footnote. *** means highly significant")
 ```
+
+<!-- Allelic richness - indicator να σημειωθεί -->
+<!-- ML_Null-Freq -->
+<!-- LGP -->
+<!-- Fst outliers --BAYESCAN outflank -->
+<!-- adegenet [@Jombart2008] ,pegas,ape,fangorn -->
+
+<!-- ### Γενετική τοπίου -->
+<!-- IBD - mantel test - adegenet, ape -->
+<!-- Genetic boundaries γενετικά φράγματα φραγμοί- Monmonier's algorithm -->
+<!-- sPCA -->
+<!-- Geneland -->
+<!-- DIYABC ??? -->
+<!-- GeneClass2 ??? -->
 
 ## Βιβλιογραφία
 <!-- &nbsp;  -->
